[package]
name = "uprove"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-std = { version = "0.4" }
ark-ff = { version = "0.4" }
ark-ec = { version = "0.4" }
ark-serialize = { version = "0.4" }
ark-bls12-381 = { version = "0.4", features = [ "curve" ] }
ark-secp256k1 = "0.4.0"
ark-curve25519 = "0.4.0"
rand = { version = "0.8", features = [ "std", "std_rng" ] }
num-bigint = { version = "0.4" }
ark-crypto-primitives = "0.4.0"
sha256 = "1.1.1"
sha2 = "0.10.6"
hex = "0.4.3"
criterion = "0.4"
curve25519-dalek-ng = { version = "4.1", features = ["std", "simd_backend", "serde"]}
rand_core = "0.6"

[[bench]]
name = "my_benchmark"
harness = false